--- a/team.html
+++ b/team.html
@@ -635,19 +635,13 @@ On NH.66, Udupi - 576103</li>
       <!-- Modal Header -->
       <div class="modal-header">
 		   <button type="button" class="close mt-2" data-dismiss="modal">&times;</button>
-        <ul>
-		  <li><b>Name:</b> MAHESH SINGH PANWAR</li>
-		<li><b>Designation:</b> Vice President</li>
-		<li><b>Address:</b>  Village Juguldi, Post Baun, Dunda, Uttarkashi -</li>
-		<li><b>Qualification:</b> -----</li>
-		<li><b>Occupation:</b> Agriculture</li>
-		  </ul>
+       
       </div>
 
       <!-- Modal body -->
       <div class="modal-body">
 		  <b> <h6>Comments</h6></b>
-        <p>"I belong from a small village called Juguldi, which is located in Dunda Tehsil of Uttarkashi district in Uttarakhand, India. It is situated 12km away from sub-district headquarter Dunda and 11km away from district headquarter Uttarkashi. Arunoday Foundation is providing an opportunity for the villagers to participate in our children’s education. This is a great opportunity for us to improve the quality of our children’s education. We want our children to get a good basic education in the village."</p>
+        <p>"Mahesh Panwar is a social-activist and a budding entrepreneur from Uttarkashi region. He is  the owner  of Hotel Shivalik at Village Dharali(Close to  Harshil), on the way to Gangotri  Temple. Apart from his hospitality business, he owns  fruit  orchards as well. He is involved into  several social initiatives and loves to help local people. He has completed his B.Com in year 2000 from Garhwal University."</p>
       </div>
 
 
